unpackaged/main/default/objects/n2de__Tag_weighting__c/n2de__Tag_weighting__c.object-meta.xml
<CustomObject>
    <label>Distribution tag weighting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution tag weightings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>