unpackaged/main/default/objects/n2de__Tag_weighting__c/fields/n2de__Tag_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Tag_value__c</fullName>
    <label>Distributor Tag Value</label>
    <referenceTo>n2de__Tag_Value__c</referenceTo>
    <relationshipLabel>Distribution tag weightings</relationshipLabel>
    <relationshipName>Tag_weightings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>