unpackaged/main/default/objects/n2de__Tag_weighting__c/fields/n2de__Tag_weighting_pattern__c.field-meta.xml
<CustomField>
    <fullName>n2de__Tag_weighting_pattern__c</fullName>
    <label>Distribution tag weighting pattern</label>
    <referenceTo>n2de__Tag_weighting_pattern__c</referenceTo>
    <relationshipLabel>Distribution tag weightings</relationshipLabel>
    <relationshipName>Tag_weightings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>