unpackaged/main/default/objects/n2de__Tag_weighting__c/fields/n2de__Weighting_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Weighting_value__c</fullName>
    <label>Weighting value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>